--- a/style.css
+++ b/style.css
@@ -1,70 +1,91 @@
-table, th{
-    border: solid black 1px;
-}
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-/* css       table, th{
-    border: solid black 1px;
-    border-collapse: collapse;
+ body{
+     width:100%
+ }
+ table, th{
+    border-style: groove;
+    padding: 5px;
+    empty-cells: show;
 }
 table, td{
-    border: solid black 1px;
+    border: outset black 2px;
     border-collapse: collapse;
-} */
+    font-size: 20px;
+}
+main{
+    background-image: url('https://www.aerotime.aero/aviation-blog/wp-content/uploads/2017/06/AAEAAQAAAAAAAAb4AAAAJGJjMTVhNjNiLWYyOWQtNDA4OS05ZmUxLWQ2NGQ0OGE2NzJhZA.jpg');
+    background-repeat: none;
+    background-size: cover;
+}
+form{
+    background-color: white;
+    font-size: 25px;
+    font-weight: bold;
+    border: 3px solid gray;
+}
+input {
+    font-size: 20px;
+}
+h1{
+    text-align: center;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
