--- a/style.css
+++ b/style.css
@@ -1,4 +1,29 @@
- body{
+  table, th, td{
+    border: 2px solid black;
+} 
+  
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ 
+ /* body{
      width:100%
  }
  table, th{
@@ -12,9 +37,12 @@ table, td{
     font-size: 20px;
 }
 main{
+    width: 100%;
+    height: 960px;
     background-image: url('https://www.aerotime.aero/aviation-blog/wp-content/uploads/2017/06/AAEAAQAAAAAAAAb4AAAAJGJjMTVhNjNiLWYyOWQtNDA4OS05ZmUxLWQ2NGQ0OGE2NzJhZA.jpg');
     background-repeat: none;
     background-size: cover;
+
 }
 form{
     background-color: white;
@@ -28,7 +56,7 @@ input {
 h1{
     text-align: center;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-}
+} */
 
 
 
